<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="true">Popular Movies</string>
    <string name="log_error_message_offline_before_download_pics_finish" translatable="false">Offline before downloading is finished.</string>
    <string name="log_error_message_offline_before_fetch_movie_data_finish" translatable="false">Offline before fetching movie date is finished.</string>
    <string name="log_error_message_offline_before_fetch_review_finish" translatable="false">Offline before fetching reviews is finished.</string>
    <string name="log_error_message_offline_before_fetch_trailer_finish" translatable="false">Offline before fetching trailers is finished.</string>
    <string name="log_information_message_download_filename" translatable="false">Local filename: </string>
    <string name="log_information_message_download_downloadedSize" translatable="false">Progress: downloadedSize: </string>
    <string name="log_information_message_download_totalSize" translatable="false">totalSize: </string>
    <string name="log_information_message_download_filepath" translatable="false">filepath: </string>
    <string name="toast_message_refresh_no_internet" translatable="true">Cannot refresh without internet connection.</string>
    <string name="toast_message_refresh_pop_up_to_date" translatable="true">Your Most Popular Movies list is up-to-date.</string>
    <string name="toast_message_refresh_top_up_to_date" translatable="true">Your Top Rated Movies list is up-to-date.</string>
    <string name="toast_message_refresh_fav_up_to_date" translatable="true">Your Favorite Movies list is up-to-date.</string>
    <string name="toast_message_review_and_trailer_not_loaded_yet" translatable="true">Please wait :p Reviews and trailers not loaded yet.</string>
    <string name="toast_message_trailer_not_loaded_yet" translatable="true">Please wait :P Trailers not loaded yet.</string>
    <string name="toast_message_no_trailer_to_share" translatable="true">Sorry. This movie doesn\'t have a trailer to share.</string>
    <string name="toast_message_offline_before_download_finish" translatable="true">Download is interrupted without internet connection.</string>
    <string name="toast_message_offline_before_fetch_movie_data_finish" translatable="true">Fetch movie data is interrupted without internet connection.</string>
    <string name="toast_message_offline_before_fetch_review_finish" translatable="true">Fetch review data is interrupted without internet connection.</string>
    <string name="toast_message_offline_before_fetch_trailer_finish" translatable="true">Fetch trailer data is interrupted without internet connection.</string>
    <string name="toast_message_movies_not_load_yet" translatable="true">Please wait :p Movies not loaded yet.</string>
    <string name="query_default_illegal_argument_exception_message" translatable="false">Cannot query unknown URI </string>
    <string name="insert_default_illegal_argument_exception_message" translatable="false">Cannot insert unknown URI </string>
    <string name="insert_fail_log_message" translatable="false">Failed to insert row for </string>
    <string name="get_type_default_illegal_argument_exception_message_part_one" translatable="false">Unknown URI </string>
    <string name="get_type_default_illegal_argument_exception_message_part_two" translatable="false"> with match </string>
    <string name="unknown_uri_for_deletion" translatable="false">Deletion is not supported for </string>
    <string name="unknown_uri_for_update" translatable="false">Update is not supported for </string>
    <string name="insert_movie_successful" translatable="true">Movie saved</string>
    <string name="insert_movie_successful_reviews_trailers_later" translatable="true">Trailers and Reviews will be saved later while online.</string>
    <string name="insert_movie_failed" translatable="true">Error with saving movie</string>
    <string name="delete_movie_successful" translatable="true">Movie unliked</string>
    <string name="delete_movie_failed" translatable="true">Error with deleting movie</string>
    <string name="delete_all_movie_successful" translatable="true">All Movies unliked.</string>
    <string name="delete_all_movie_failed" translatable="true">Error with unliking all movies.</string>
    <string name="delete_all_movie_no_movies_to_delete" translatable="true">No movies to unlike.</string>
    <string name="insert_movie_movie_successful" translatable="false">Movie movie saved</string>
    <string name="insert_movie_movie_failed" translatable="false">Error with saving movie movie</string>
    <string name="insert_review_successful" translatable="false">Review saved</string>
    <string name="insert_review_failed" translatable="false">Error with saving review</string>
    <string name="insert_trailer_successful" translatable="false">Traielr saved</string>
    <string name="insert_trailer_failed" translatable="false">Error with saving trailer</string>
    <string name="delete_movie_movie_successful" translatable="false">Movie movie deleted</string>
    <string name="delete_movie_movie_failed" translatable="false">Error with deleting movie movie</string>
    <string name="delete_review_successful" translatable="false"> reviews deleted</string>
    <string name="delete_review_failed" translatable="false">Error with deleting review</string>
    <string name="delete_trailer_successful" translatable="false"> trailers deleted</string>
    <string name="delete_trailer_failed" translatable="false">Error with deleting trailer</string>
    <string name="error_message" translatable="true">An error has occurred.</string>
    <string name="error_message_no_fav_movie" translatable="true">You don\'t have favorite movies !\nStart by pressing the STAR button on single movie\'s Page !</string>
    <string name="error_message_no_popular_movie" translatable="true">No popular movies! Please enable the internet and refresh! </string>
    <string name="error_message_no_top_rated_movie" translatable="true">No top rated movies! Please enable the internet and refresh! </string>
    <string name="error_message_enable_offline_false" translatable="true">You have disabled offline use in the settings menu. Please reset and refresh! </string>
    <string name="settings_order_by_label" translatable="true">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_most_popular_value</string>
    <string name="settings_order_by_most_popular_label" translatable="true">Most Popular</string>
    <string name="settings_order_by_most_popular_value" translatable="false">popular</string>
    <string name="settings_order_by_top_rated_label" translatable="true">Top Rated</string>
    <string name="settings_order_by_top_rated_value" translatable="false">top_rated</string>
    <string name="settings_order_by_favorites_label" translatable="true">Favorite Movies</string>
    <string name="settings_order_by_favorites_value" translatable="false">favorites</string>
    <string name="pref_enable_offline_label" translatable="true">Enable Offline Use</string>
    <string name="pref_enable_offline_key" translatable="false">enable_offline</string>
    <string name="pref_show_true" translatable="true">Enabled</string>
    <string name="pref_show_false" translatable="true">Disabled</string>
    <string name="main_activity_title_most_popular" translatable="true">Most Popular Movies</string>
    <string name="main_activity_title_top_rated" translatable="true">Top Rated Movies</string>
    <string name="main_activity_title_favorite" translatable="true">Favorite Movies</string>
    <string name="delete_all_dialog_msg" translatable="true">Unlike all movies?</string>
    <string name="delete" translatable="true">Unlike</string>
    <string name="cancel" translatable="true">Cancel</string>
    <string name="refresh_menu_item" translatable="true">Refresh</string>
    <string name="settings_menu_item" translatable="true">Settings</string>
    <string name="settings_title" translatable="true">Movie Settings</string>
    <string name="delete_all_menu_item" translatable="true">Unlike All Movies</string>
    <string name="action_share" translatable="true">Share</string>
    <string name="title_share_url_string" translatable="true">Share the first Youtube Url</string>
    <string name="detail_activity_release_date_label" translatable="true">Release Date:</string>
    <string name="detail_activity_user_rating_label" translatable="true">Average User Rating:</string>
    <string name="detail_activity_user_review_label" translatable="true">Total User Reviews:</string>
    <string name="detail_activity_trailers_label" translatable="true">Trailers:</string>
    <string name="list_item_user_review_author_label" translatable="true">Author:</string>
    <string name="detail_activity_offline_reminder_text" translatable="true">Available while online.</string>
    <string name="fake_detail_movie_name" translatable="false">Sing</string>
    <string name="fake_detail_movie_rate" translatable="false">6.7</string>
    <string name="fake_detail_movie_date" translatable="false">2016-11-23</string>
    <string name="fake_datail_movie_plot" translatable="false">A koala named Buster recruits his best friend to help him drum up business for
    his theater by hosting a singing competition.</string>
    <string name="fake_detail_movie_number_of_review" translatable="false">4</string>
    <string name="fake_detail_movie_number_of_trailer" translatable="false">3</string>
    <string name="fake_detail_movie_review_author_name" translatable="false">TopKek</string>
    <string name="fake_detail_movie_review" translatable="false">Featuring appealing covers of hit songs and an all-star cast,
        this cute animated comedy capitalizes on the craze for both talking-animal adventures and talent competitions.
        The movie may not have the substance of Inside Out or the overt messages of Zootopia, but, like Trolls, it\'s simple,
        with catchy pop music and jokes that are likely to make kids laugh. (Unlike Trolls, its take-aways aren\'t quite as
        thoroughly positive \-\- see below.) The musical numbers are by far the best part of the movie, including Jennifer
        Hudson-voiced renditions of \"Golden Slumbers/Carry That Weight\" to the piggy duet of \"Shake It Off\" (by Witherspoon
        and comedian Nick Kroll as a German boar called Gunter) to Kelly\'s show-stopping version of "Hallelujah."</string>
    <string name="empty_movie_list" translatable="true">No Movie Information Available right now.</string>
    <string name="title_widget_detail" translatable="true">Movie Details</string>
    <string name="highest_rate_pop_movie_notification_title" translatable="true">High rate popular movie today!</string>
    <string name="format_pop_best_movie_notification" translatable="true">Title: <xliff:g id="movie_title">%1$s</xliff:g> User Rate: <xliff:g id="user_rate">%2$s</xliff:g></string>
    <string name="detail_page_notification_action" translatable="true">Let me see!</string>
    <string name="ignore_notification_action" translatable="true">I don\'t think so.</string>
    <string name="watch_movie_notification_title" translatable="true">Turn on TV!</string>
    <string name="format_watch_movie_notification" translatable="true">Watch <xliff:g id="movie_title">%1$s</xliff:g> on <xliff:g id="tv_channel">%2$s</xliff:g> !</string>
    <string name="a11y_detail_activity_save_floating_button" translatable="true">Save the movie to favorite movie list.</string>
    <string name="a11y_detail_activity_unsave_floating_button" translatable="true">Unlike the movie from favorite movie list.</string>
    <string name="a11y_trailer_fab_button" translatable="true">Movie Trailer Number</string>
</resources>