<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="se.sugarest.jane.popularmovies.ui.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_filter"
        android:orderInCategory="2"
        android:title="@string/settings_menu_item"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="1"
        android:title="@string/refresh_menu_item"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="3"
        android:title="@string/delete_all_menu_item"
        android:visible="false"
        app:showAsAction="never" />
</menu>
