<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fl_image"
            android:layout_width="0dp"
            android:layout_height="@dimen/image_height_detail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_loading"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height_detail"
                android:scaleType="centerCrop"
                android:src="@drawable/pic_loading_indicator_1560_878"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_movie_poster_image_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height_detail"
                android:scaleType="centerCrop"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:src="@drawable/fake_detail_image" />
        </FrameLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@+id/fl_image"
            app:layout_constraintRight_toRightOf="@+id/tv_a_plot_synopsis"
            app:layout_constraintTop_toBottomOf="@+id/fl_image" />

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_detail_horizontal_padding"
            android:layout_marginStart="@dimen/activity_detail_horizontal_padding"
            android:layout_marginTop="@dimen/activity_detail_vertical_padding"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fl_image"
            tools:text="@string/fake_detail_movie_name" />

        <ImageView
            android:id="@+id/dividing_line_image_and_movie_title"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/activity_detail_vertical_padding"
            android:background="@color/colorPrimaryLight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_title" />

        <TextView
            android:id="@+id/tv_release_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_detail_horizontal_padding"
            android:layout_marginStart="@dimen/activity_detail_horizontal_padding"
            android:text="@string/detail_activity_release_date_label"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_release_date"
            app:layout_constraintBottom_toBottomOf="@+id/tv_release_date"/>

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_detail_horizontal_padding"
            android:layout_marginStart="@dimen/activity_detail_horizontal_padding"
            android:layout_marginTop="@dimen/activity_detail_vertical_padding"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@+id/tv_release_date_label"
            app:layout_constraintTop_toBottomOf="@+id/dividing_line_image_and_movie_title"
            tools:text="@string/fake_detail_movie_date" />

        <ImageView
            android:id="@+id/dividing_line_date_and_plot"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/activity_detail_vertical_padding"
            android:background="@color/colorPrimaryLight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

        <TextView
            android:id="@+id/tv_a_plot_synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_detail_horizontal_padding"
            android:layout_marginLeft="@dimen/activity_detail_horizontal_padding"
            android:layout_marginRight="@dimen/activity_detail_horizontal_padding"
            android:layout_marginStart="@dimen/activity_detail_horizontal_padding"
            android:layout_marginTop="@dimen/activity_detail_vertical_padding"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dividing_line_date_and_plot"
            tools:text="@string/fake_datail_movie_plot" />

        <ImageView
            android:id="@+id/dividing_line_plot_and_rating"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/activity_detail_vertical_padding"
            android:background="@color/colorPrimaryLight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_a_plot_synopsis" />

        <TextView
            android:id="@+id/tv_user_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_detail_vertical_padding"
            android:text="@string/detail_activity_user_rating_label"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_a_plot_synopsis"
            app:layout_constraintTop_toBottomOf="@+id/dividing_line_plot_and_rating" />

        <TextView
            android:id="@+id/tv_user_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_user_rating_label"
            app:layout_constraintLeft_toLeftOf="@+id/fab_favorite"
            app:layout_constraintRight_toRightOf="@+id/fab_favorite"
            app:layout_constraintTop_toTopOf="@+id/tv_user_rating_label"
            tools:text="@string/fake_detail_movie_rate" />

    </android.support.constraint.ConstraintLayout>

</layout>