<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_trailers_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_detail_vertical_padding"
            android:layout_marginLeft="@dimen/activity_detail_horizontal_padding"
            android:layout_marginStart="@dimen/activity_detail_horizontal_padding"
            android:layout_marginTop="@dimen/activity_detail_vertical_padding"
            android:text="@string/detail_activity_trailers_label"
            app:layout_constraintBottom_toTopOf="@+id/recyclerview_movie_trailers"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_trailer_loading_indicator"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_marginLeft="@dimen/activity_detail_horizontal_padding"
            android:layout_marginStart="@dimen/activity_detail_horizontal_padding"
            android:adjustViewBounds="true"
            android:src="@drawable/trailer_review_loading_indicator"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tv_trailers_label"
            app:layout_constraintLeft_toRightOf="@+id/tv_trailers_label"
            app:layout_constraintTop_toTopOf="@+id/tv_trailers_label" />

        <TextView
            android:id="@+id/tv_number_of_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_detail_horizontal_padding"
            android:layout_marginStart="@dimen/activity_detail_horizontal_padding"
            android:gravity="center"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_trailers_label"
            app:layout_constraintLeft_toRightOf="@+id/tv_trailers_label"
            app:layout_constraintTop_toTopOf="@+id/tv_trailers_label"
            tools:text="@string/fake_detail_movie_number_of_trailer" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_movie_trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ImageView
            android:id="@+id/dividing_line_trailers_and_reviews"
            android:layout_width="0dp"
            android:layout_height="@dimen/image_height_dividing_line_triple"
            android:layout_marginTop="@dimen/activity_detail_vertical_padding"
            android:background="@color/colorPrimaryLight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview_movie_trailers" />

        <TextView
            android:id="@+id/tv_user_review_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/detail_activity_user_review_label"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_trailers_label"
            app:layout_constraintTop_toBottomOf="@+id/dividing_line_trailers_and_reviews" />

        <ImageView
            android:id="@+id/iv_review_loading_indicator"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_marginLeft="@dimen/activity_detail_horizontal_padding"
            android:layout_marginStart="@dimen/activity_detail_horizontal_padding"
            android:adjustViewBounds="true"
            android:src="@drawable/trailer_review_loading_indicator"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tv_user_review_label"
            app:layout_constraintLeft_toRightOf="@+id/tv_user_review_label"
            app:layout_constraintTop_toTopOf="@+id/tv_user_review_label" />

        <TextView
            android:id="@+id/tv_number_of_user_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_detail_horizontal_padding"
            android:layout_marginStart="@dimen/activity_detail_horizontal_padding"
            android:gravity="center"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_user_review_label"
            app:layout_constraintLeft_toRightOf="@+id/tv_user_review_label"
            app:layout_constraintTop_toTopOf="@+id/tv_user_review_label"
            tools:text="@string/fake_detail_movie_number_of_review" />

        <TextView
            android:id="@+id/tv_space_8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintTop_toBottomOf="@+id/tv_user_review_label" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_movie_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_space_8dp" />

    </android.support.constraint.ConstraintLayout>
</layout>